# Copyright 2020 Samsung Electronics Co., Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Whether to build the Tizen shell for the host platform, if available.
  #
  # By default, the Tizen shell is not built if there is a native toolkit shell,
  # but it can be enabled for supported platforms (Linux)
  # as an extra build artifact with this flag. The native toolkit shell will
  # still be built as well.
  build_tizen_shell = false
  tizen_sdk_4 = false
}
